@@ -3,6 +3,10 @@
 The following people have submitted changes which have been applied to the
 core:
 
+=== Edge
+
+* Josh French
+
 === 0.9.1 Refraction
 
 * Jim Gay
